Fixe sidebar item text vertcical alignment

--- a/Libadwaita/styles/sidebar.less
+++ b/Libadwaita/styles/sidebar.less
@@ -88,6 +88,10 @@
 			margin-left: 8px;
 		}
 
+		.name {
+			margin-top: 2px;
+		}
+
 		img.content-mask {
 			background-color: @text_color;
 			margin-top: -1px;
